changed dark mode in dashboard and escape cuz it has options themes based on system theme

--- a/html/Escape.html
+++ b/html/Escape.html
@@ -143,6 +143,7 @@
 
     <!-- Victory Screen -->
     <div id="victory-screen" class="screen">
+           <button class="close-btn" onclick="window.location.href='../html/game.html'">x</button> 
         <div class="container">
             <div class="victory-content">
                 <h1>🎉 Mission Accomplished!</h1>
