--- a/html/game.html
+++ b/html/game.html
@@ -17,7 +17,7 @@
         <li><a href="./home.html"">Home</a></li>
         <li><a href="./Dashboard.html">DashBoard</a></li>
         <li><a href="#" class="active"">Games</a></li>
-        <li><a href="./Learn.html">Cyber Library</a></li>
+        <li><a href="/html/Learn.html">Cyber Library</a></li>
         <li><a href="./ddos-defence.html">DDOS</a></li>
       </ul>
     </nav>
