--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -11,26 +11,31 @@
     <!-- Matrix Background -->
     <canvas id="matrix-background"></canvas>
 
-    <!-- Navigation Bar -->
-    <nav class="cyber-nav">
-        <div class="nav-container">
-            <div class="nav-brand">
-                <h1 class="section-title">🚀 Cyber Security Dashboard</h1>
-            </div>
-            <div class="nav-actions">
-                                <nav class="navbar"></nav>
-      <ul class="nav-links">
-        <li><a href="./home.html"">Home</a></li>
-        <li><a href="#" class="active">DashBoard</a></li>
-        <li><a href="./game.html">Games</a></li>
-        <li><a href="./Learn.html">Cyber Library</a></li>
-        <li><a href="./ddos-defence.html">DDOS</a></li>
-      </ul>
-    </nav>
-               
-            </div>
-        </div>
-    </nav>
+<!-- Navigation Bar -->
+<nav class="cyber-nav navbar">
+  <div class="nav-container">
+    <div class="nav-brand">
+      <h1 class="section-title">🚀 Cyber Security Dashboard</h1>
+    </div>
+
+    <!-- Hamburger -->
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <ul class="nav-links" id="navLinks">
+      <li><a href="./home.html">Home</a></li>
+      <li><a href="#" class="active">DashBoard</a></li>
+      <li><a href="./game.html">Games</a></li>
+      <li><a href="./Learn.html">Cyber Library</a></li>
+      <li><a href="./ddos-defence.html">DDOS</a></li>
+    </ul>
+  </div>
+</nav>
+
+
 
     <div class="container">
         <!-- Section Header (Original Layout) -->
