--- a/html/Learn.html
+++ b/html/Learn.html
@@ -38,26 +38,36 @@
     <div id="main-interface" class="hidden">
        
         <!-- Header -->
-        <header class="terminal-header">
-              <nav class="navbar">
+<header class="terminal-header">
+  <nav class="navbar">
     <h1 class="glitch-title" data-text="CYBER TERMINAL">CYBER TERMINAL</h1>
-      <ul class="nav-links">
-        <li><a href="./home.html">Home</a></li>
-        <li><a href="./Dashboard.html">DashBoard</a></li>
-        <li><a href="game.html">Games</a></li>
-        <li><a href="#" class="active">Cyber Library</a></li>
-        <li><a href="./ddos-defence.html">DDOS</a></li>
-      </ul>
-    </nav>
-            <div class="header-content">
-            
-                <div class="system-info">
-                    <span class="info-item">USER: cyberguard</span>
-                    <span class="info-item">HOST: security-lab</span>
-                    <span class="info-item">MODE: learning</span>
-                </div>
-            </div>
-        </header>
+
+    <!-- Nav Links -->
+    <ul class="nav-links" id="navLinks">
+      <li><a href="./home.html">Home</a></li>
+      <li><a href="./Dashboard.html">DashBoard</a></li>
+      <li><a href="game.html">Games</a></li>
+      <li><a href="#" class="active">Cyber Library</a></li>
+      <li><a href="./ddos-defence.html">DDOS</a></li>
+    </ul>
+
+    <!-- Hamburger -->
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </nav>
+
+  <div class="header-content">
+    <div class="system-info">
+      <span class="info-item">USER: cyberguard</span>
+      <span class="info-item">HOST: security-lab</span>
+      <span class="info-item">MODE: learning</span>
+    </div>
+  </div>
+</header>
+
 
         <!-- Main Content Grid -->
         <div class="main-grid">
