--- a/html/ddos-defence.html
+++ b/html/ddos-defence.html
@@ -22,16 +22,23 @@
   <header class="control-header">
 
     <!-- Row 1: Navbar only -->
-    <nav class="navbar">
-      <h1>🛡️ DDoS Defense Command Center</h1>
-      <ul class="nav-links">
-        <li><a href="./home.html">Home</a></li>
-        <li><a href="./Dashboard.html">DashBoard</a></li>
-        <li><a href="game.html">Games</a></li>
-        <li><a href="./Learn.html">Cyber-Library</a></li>
-        <li><a href="#" class="active">DDOS</a></li>
-      </ul>
-    </nav>
+   <nav class="navbar">
+  <h1>🛡️ DDoS Defense Command Center</h1>
+  <ul class="nav-links">
+    <li><a href="./home.html">Home</a></li>
+    <li><a href="./Dashboard.html">DashBoard</a></li>
+    <li><a href="game.html">Games</a></li>
+    <li><a href="./Learn.html">Cyber-Library</a></li>
+    <li><a href="#" class="active">DDOS</a></li>
+  </ul>
+
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</nav>
+
 
     <!-- Row 2: System Status -->
 <div class="system-status-row">
