--- a/html/home.html
+++ b/html/home.html
@@ -13,30 +13,35 @@
   <body>
     <!-- Navigation -->
     <nav class="navbar">
-      <div class="logo">
-        <span class="hexagon">
-          <svg width="32" height="32" viewBox="0 0 32 32">
-            <polygon points="16,3 29,11 29,25 16,31 3,25 3,11" fill="#00cfff" />
-          </svg>
-        </span>
-        <span class="logo-text">Cyber-Guardian</span>
-      </div>
-      <ul class="nav-links id="navLinks">
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="./Dashboard.html">DashBoard</a></li>
-        <li><a href="./game.html">Games</a></li>
-        <li><a href="./Learn.html">Cyber Library</a></li>
-        <li><a href="./ddos-defence.html">DDOS</a></li>
-      </ul>
-      <div>
-          <a href="./Contactus.html" class="outline-btn">Contact us </a>
-   <div class="hamburger" id="hamburger">
-    <span></span>
-    <span></span>
-    <span></span>
+  <div class="logo">
+    <span class="hexagon">
+      <svg width="32" height="32" viewBox="0 0 32 32">
+        <polygon points="16,3 29,11 29,25 16,31 3,25 3,11" fill="#00cfff" />
+      </svg>
+    </span>
+    <span class="logo-text">Cyber-Guardian</span>
   </div>
-      </div>
-    </nav>
+
+  
+  <ul class="nav-links" id="navLinks">
+    <li><a href="#" class="active">Home</a></li>
+    <li><a href="./Dashboard.html">DashBoard</a></li>
+    <li><a href="./game.html">Games</a></li>
+    <li><a href="./Learn.html">Cyber Library</a></li>
+    <li><a href="./ddos-defence.html">DDOS</a></li>
+  </ul>
+
+  <div class="nav-right">
+  
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+      <a href="./Contactus.html" class="outline-btn">Contact us</a>
+  </div>
+
+</nav>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -144,6 +149,7 @@
 
   hamburger.addEventListener('click', () => {
     navLinks.classList.toggle('show');
+      hamburger.classList.toggle('active'); 
   });
 </script>
   
